--- a/index.html
+++ b/index.html
@@ -8,6 +8,45 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <main>
+        <section>
+            <div class="container">
+                <div class="flex-container">
+                    <div class="col">
+                        <div class="product">
+                            <img src="img/1.webp" alt="">
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="product">
+                            <img src="img/2.webp" alt="">
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="product">
+                            <img src="img/3.webp" alt="">
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="product">
+                            <img src="img/4.webp" alt="">
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="product">
+                            <img src="img/5.webp" alt="">
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="product">
+                            <img src="img/6.webp" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </section>
+    </main>
     
 </body>
 </html>
