--- a/index.html
+++ b/index.html
@@ -15,31 +15,44 @@
                     <div class="col">
                         <div class="product">
                             <img src="img/1.webp" alt="">
+                            <p class="hearts">&hearts;</p>
+                            <span class="discount">-50%</span>
+                            <span class="sostenibilità">Sostenibilità</span>
                         </div>
                     </div>
                     <div class="col">
                         <div class="product">
                             <img src="img/2.webp" alt="">
+                            <p class="hearts">&hearts;</p>
+                            <span class="discount">-30%</span>
                         </div>
                     </div>
                     <div class="col">
                         <div class="product">
                             <img src="img/3.webp" alt="">
+                            <p class="hearts">&hearts;</p>
+                            <span class="discount">-30%</span>
                         </div>
                     </div>
                     <div class="col">
                         <div class="product">
                             <img src="img/4.webp" alt="">
+                            <p class="hearts">&hearts;</p>
+                            <span class="discount">-50%</span>
+                            <span class="sostenibilità">Sostenibilità</span>
                         </div>
                     </div>
                     <div class="col">
                         <div class="product">
                             <img src="img/5.webp" alt="">
+                            <p class="hearts">&hearts;</p>
                         </div>
                     </div>
                     <div class="col">
                         <div class="product">
                             <img src="img/6.webp" alt="">
+                            <p class="hearts">&hearts;</p>
+                            <span class="sostenibilità img6">Sostenibilità</span>
                         </div>
                     </div>
                 </div>
