--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
                             <span class="discount">-50%</span>
                             <span class="sostenibilità">Sostenibilità</span>
                         </div>
+                        <div>
+                        <p class="marca">Levi's</p>
+                        <h3>RELAXED FIT TEE UNISEX</h3>
+                        <p class="redprice">14,99&euro;<span class="prezzo"> 29,99</span></p>
+                    </div>
                     </div>
                     <div class="col">
                         <div class="product">
@@ -26,12 +31,22 @@
                             <p class="hearts">&hearts;</p>
                             <span class="discount">-30%</span>
                         </div>
+                        <div>
+                        <p class="marca">GUESS</p>
+                        <h3>ROSES TEE</h3>
+                        <p class="redprice">20,99 &euro; <span class="prezzo">29,99</span></p>
+                        </div>
                     </div>
                     <div class="col">
                         <div class="product">
                             <img src="img/3.webp" alt="">
                             <p class="hearts">&hearts;</p>
                             <span class="discount">-30%</span>
+                        </div>
+                        <div>
+                        <p class="marca">Come Zucchero Filato</p>
+                        <h3>VOGLIA DI COLORI PASTELLO</h3>
+                        <span class="redprice">129,99 &euro;</span>
                         </div>
                     </div>
                     <div class="col">
@@ -41,11 +56,21 @@
                             <span class="discount">-50%</span>
                             <span class="sostenibilità">Sostenibilità</span>
                         </div>
+                        <div>
+                        <p class="marca">Levi's</p>
+                        <h3>TEE UNISEX</h3>
+                        <p class="redprice">14,99 &euro; <span class="prezzo"> 29,99 </span></p>
+                        </div>
                     </div>
                     <div class="col">
                         <div class="product">
                             <img src="img/5.webp" alt="">
                             <p class="hearts">&hearts;</p>
+                        </div>
+                        <div>
+                        <p class="marca">Maya Deluxe</p>
+                        <h3>STRIPE BOTICE</h3>
+                        <span class="redprice">99,99 &euro;</span>
                         </div>
                     </div>
                     <div class="col">
@@ -53,6 +78,12 @@
                             <img src="img/6.webp" alt="">
                             <p class="hearts">&hearts;</p>
                             <span class="sostenibilità img6">Sostenibilità</span>
+                        </div>
+                        <div>
+                        <p class="marca">Esprit</p>
+                        <h3>MAGLIONE BLACK</h3>
+                        <p class="redprice">29,99 &euro;
+                        </p>
                         </div>
                     </div>
                 </div>
