Aggiunto alt img

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <div class="flex-container">
                     <div class="col">
                         <div class="product">
-                            <img src="img/1.webp" alt="">
+                            <img src="img/1.webp" alt="maglia-Levis-1">
                             <p class="hearts">&hearts;</p>
                             <span class="discount">-50%</span>
                             <span class="sostenibilità">Sostenibilità</span>
@@ -27,7 +27,7 @@
                     </div>
                     <div class="col">
                         <div class="product">
-                            <img src="img/2.webp" alt="">
+                            <img src="img/2.webp" alt="maglia-Guess">
                             <p class="hearts">&hearts;</p>
                             <span class="discount">-30%</span>
                         </div>
@@ -39,7 +39,7 @@
                     </div>
                     <div class="col">
                         <div class="product">
-                            <img src="img/3.webp" alt="">
+                            <img src="img/3.webp" alt="vestito-verde">
                             <p class="hearts">&hearts;</p>
                             <span class="discount">-30%</span>
                         </div>
@@ -51,7 +51,7 @@
                     </div>
                     <div class="col">
                         <div class="product">
-                            <img src="img/4.webp" alt="">
+                            <img src="img/4.webp" alt="maglia-Levis-2">
                             <p class="hearts">&hearts;</p>
                             <span class="discount">-50%</span>
                             <span class="sostenibilità">Sostenibilità</span>
@@ -64,7 +64,7 @@
                     </div>
                     <div class="col">
                         <div class="product">
-                            <img src="img/5.webp" alt="">
+                            <img src="img/5.webp" alt="vestito-maya-deluxe">
                             <p class="hearts">&hearts;</p>
                         </div>
                         <div>
@@ -75,7 +75,7 @@
                     </div>
                     <div class="col">
                         <div class="product">
-                            <img src="img/6.webp" alt="">
+                            <img src="img/6.webp" alt="maglione-esprit">
                             <p class="hearts">&hearts;</p>
                             <span class="sostenibilità img6">Sostenibilità</span>
                         </div>
